docs/0.14/_sources/api/gammapy.modeling.models.TemplateSpatialModel.rst.txt
TemplateSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: TemplateSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TemplateSpatialModel.evaluation_radius
      ~TemplateSpatialModel.filename
      ~TemplateSpatialModel.frame
      ~TemplateSpatialModel.map
      ~TemplateSpatialModel.meta
      ~TemplateSpatialModel.norm
      ~TemplateSpatialModel.normalize
      ~TemplateSpatialModel.parameters
      ~TemplateSpatialModel.position
      ~TemplateSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~TemplateSpatialModel.__call__
      ~TemplateSpatialModel.copy
      ~TemplateSpatialModel.create
      ~TemplateSpatialModel.evaluate
      ~TemplateSpatialModel.evaluate_geom
      ~TemplateSpatialModel.from_dict
      ~TemplateSpatialModel.read
      ~TemplateSpatialModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: evaluation_radius
   .. autoattribute:: filename
   .. autoattribute:: frame
   .. autoattribute:: map
   .. autoattribute:: meta
   .. autoattribute:: norm
   .. autoattribute:: normalize
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: read
   .. automethod:: to_dict
